; ModuleID = '/home/carl/AnghaBench/kphp-kdb/bayes/extr_bayes-data.c_add_word.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/bayes/extr_bayes-data.c_add_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@debug = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"WORD %s\0A\00", align 1
@HASH_MUL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"WORD %s | %lld\0A\00", align 1
@words = common dso_local global i32* null, align 8
@words_len = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_word(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [10000 x i8], align 16
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = getelementptr inbounds [10000 x i8], [10000 x i8]* %3, i64 0, i64 0
  %7 = call i32 @put_string_utf8(i32* %5, i8* %6)
  %8 = load i64, i64* @debug, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @stderr, align 4
  %12 = getelementptr inbounds [10000 x i8], [10000 x i8]* %3, i64 0, i64 0
  %13 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %12)
  br label %14

14:                                               ; preds = %10, %1
  store i32 0, i32* %4, align 4
  br label %15

15:                                               ; preds = %19, %14
  %16 = load i32*, i32** %2, align 8
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %15
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @HASH_MUL, align 4
  %22 = mul nsw i32 %20, %21
  %23 = load i32*, i32** %2, align 8
  %24 = getelementptr inbounds i32, i32* %23, i32 1
  store i32* %24, i32** %2, align 8
  %25 = load i32, i32* %23, align 4
  %26 = add nsw i32 %22, %25
  store i32 %26, i32* %4, align 4
  br label %15

27:                                               ; preds = %15
  %28 = getelementptr inbounds [10000 x i8], [10000 x i8]* %3, i64 0, i64 0
  %29 = load i32, i32* %4, align 4
  %30 = sext i32 %29 to i64
  %31 = call i32 @debugp(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* %28, i64 %30)
  %32 = load i32, i32* %4, align 4
  %33 = load i32*, i32** @words, align 8
  %34 = load i32, i32* @words_len, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* @words_len, align 4
  %36 = sext i32 %34 to i64
  %37 = getelementptr inbounds i32, i32* %33, i64 %36
  store i32 %32, i32* %37, align 4
  ret void
}

declare dso_local i32 @put_string_utf8(i32*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @debugp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
